updated python part

--- a/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
@@ -34,7 +34,8 @@
     "1. Import libraries\n",
     "2. Query for data in PANGAEA\n",
     "3. Get metadata\n",
-    "4. Download datasets"
+    "4. Download datasets\n",
+    "5. Download binary files"
    ]
   },
   {
@@ -56,7 +57,8 @@
     "import os\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import requests "
+    "import requests \n",
+    "from urllib.request import urlopen, urlretrieve"
    ]
   },
   {
@@ -82,7 +84,7 @@
    "source": [
     "### PANGAEApy\n",
     "## if you need to install PANGAEApy use pip\n",
-    "#!pip install pangaeapy # Uncomment to install pangaeapy\n",
+    "!pip install pangaeapy # comment to not install pangaeapy\n",
     "\n",
     "## if you need to upgrade PANGAEApy use \n",
     "#!pip install pangaeapy --upgrade # Uncomment to upgrade pangaeapy\n",
@@ -128,6 +130,8 @@
    "source": [
     "# ignore warnings in this script\n",
     "import warnings\n",
+    "from pandas.errors import SettingWithCopyWarning\n",
+    "warnings.simplefilter(action='ignore', category=(SettingWithCopyWarning))\n",
     "warnings.simplefilter(action='ignore', category=FutureWarning)"
    ]
   },
@@ -416,17 +420,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solution 2.4.1\n",
-    "query = pan.PanQuery(\"Octopus vulgaris\")\n",
-    "print(f'There are {query.totalcount} query results.')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -440,21 +433,6 @@
    "outputs": [],
    "source": [
     "# Your solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "tags": [
-     "solution"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "#@title Solution 2.4.2\n",
-    "query = pan.PanQuery(\"citation:title:'sea ice'\")\n",
-    "print(f'There are {query.totalcount} query results.')"
    ]
   },
   {
@@ -474,17 +452,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solution 2.4.3\n",
-    "query = pan.PanQuery(\"citation:author:'boetius, antje'\")\n",
-    "print(f'There are {query.totalcount} query results.')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -498,17 +465,6 @@
    "outputs": [],
    "source": [
     "# Your solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solution 2.4.4\n",
-    "query = pan.PanQuery(\"parameter:'Temperature, water' method:CTD/Rosette\")\n",
-    "print(f'There are {query.totalcount} query results.')"
    ]
   },
   {
@@ -651,15 +607,15 @@
    },
    "outputs": [],
    "source": [
-    "# Create data folder\n",
-    "data_folder = \"PANGAEA_data\"\n",
+    "# Create data directory\n",
+    "data_directory = \"PANGAEA_data\"\n",
     "# Check if it already exists before creating it\n",
-    "if not os.path.isdir(data_folder):\n",
-    "    os.mkdir(data_folder)\n",
+    "if not os.path.isdir(data_directory):\n",
+    "    os.mkdir(data_directory)\n",
     "    \n",
     "# Save as csv (comma seperated value)\n",
-    "df.to_csv(os.path.join(data_folder, f'PANGAEA_metadata_{ds.id}.csv'), encoding='utf-8')\n",
-    "df.to_csv(os.path.join(data_folder, f'PANGAEA_metadata_{ds.id}.txt'), sep='\\t', encoding='utf-8', index=False)\n",
+    "df.to_csv(os.path.join(data_directory, f'PANGAEA_metadata_{ds.id}.csv'), encoding='utf-8')\n",
+    "df.to_csv(os.path.join(data_directory, f'PANGAEA_metadata_{ds.id}.txt'), sep='\\t', encoding='utf-8', index=False)\n",
     "print(f'PANGAEA metadata of {ds.id} saved')"
    ]
   },
@@ -725,7 +681,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "NOTE: As a safety precaution, the number of metadata requests is limited to 180 per 30 seconds. If you have larger requests, prepare to wait or use a different tool e.g. OAI-PMH (https://wiki.pangaea.de/wiki/OAI-PMH)."
+    "NOTE: As a safety precaution, the number of metadata requests is limited for a specific time period. \n",
+    "\n",
+    "_Received too many (metadata) requests error (429)...waiting 30s -_\n",
+    "\n",
+    "If you have larger requests, prepare to wait or use a different tool e.g. OAI-PMH (https://wiki.pangaea.de/wiki/OAI-PMH)."
    ]
   },
   {
@@ -740,7 +700,7 @@
     "    #print(value)\n",
     "    \n",
     "    # get metadata \n",
-    "    ds = PanDataSet(id=value, include_data=False)#, enable_cache=True) # just metadata\n",
+    "    ds = PanDataSet(id=value, include_data=False) # just metadata\n",
     "   \n",
     "    # store metadata in df in new column\n",
     "    df.loc[ind,'dataset title'] = ds.title\n",
@@ -797,15 +757,15 @@
    },
    "outputs": [],
    "source": [
-    "# Create data folder\n",
-    "data_folder = \"PANGAEA_data\"\n",
+    "# Create data directory\n",
+    "data_directory = \"PANGAEA_data\"\n",
     "# Check if it already exists before creating it\n",
-    "if not os.path.isdir(data_folder):\n",
-    "    os.mkdir(data_folder)\n",
+    "if not os.path.isdir(data_directory):\n",
+    "    os.mkdir(data_directory)\n",
     "    \n",
     "# Save as csv (comma seperated value)\n",
-    "df.to_csv(os.path.join(data_folder, f'PANGAEA_metadata_df_all.csv'), encoding='utf-8')\n",
-    "df.to_csv(os.path.join(data_folder, f'PANGAEA_metadata_df_all.txt'), sep='\\t', encoding='utf-8', index=False)\n",
+    "df.to_csv(os.path.join(data_directory, f'PANGAEA_metadata_df_all.csv'), encoding='utf-8')\n",
+    "df.to_csv(os.path.join(data_directory, f'PANGAEA_metadata_df_all.txt'), sep='\\t', encoding='utf-8', index=False)\n",
     "print(f'PANGAEA metadata df_all saved')"
    ]
   },
@@ -843,17 +803,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solution 3.3.1\n",
-    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.937210\", include_data=False)\n",
-    "ds.title"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -868,17 +817,6 @@
    "outputs": [],
    "source": [
     "# Your solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solution 3.3.2\n",
-    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.863967\", include_data=False)\n",
-    "ds.date"
    ]
   },
   {
@@ -899,35 +837,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solution 3.3.3\n",
-    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.863975\")\n",
-    "print(list(ds.params))\n",
-    "\n",
-    "print(\"\".join(40*[\"-\"]))\n",
-    "\n",
-    "\n",
-    "# Spell out abbreviated parameters\n",
-    "print(\"; \".join([f'{param.name} [{param.unit}]' if param.unit else param.name for param in ds.params.values()]))\n",
-    "\n",
-    "print(\"\".join(40*[\"-\"]))\n",
-    "\n",
-    "\n",
-    "# Find all parameters containing temperature\n",
-    "for value in ds.params.values():\n",
-    "    if 'temperature' in value.name or 'Temperature' in value.name:\n",
-    "        if value.unit:\n",
-    "            print(value.name,'[',value.unit,']')\n",
-    "        else:\n",
-    "            print(value.name)\n",
-    "\n"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {
     "tags": []
@@ -943,6 +852,8 @@
    },
    "source": [
     "## 4.1 Download single dataset\n",
+    "* download open access dataset\n",
+    "* apply authentication token\n",
     "\n",
     "AIM: How can I download a single dataset right into Python or to my harddrive?"
    ]
@@ -971,7 +882,7 @@
    "metadata": {},
    "source": [
     "### Download dataset from PANGAEA\n",
-    "Dataset: https://doi.pangaea.de/10.1594/PANGAEA.923033"
+    "Example dataset: https://doi.pangaea.de/10.1594/PANGAEA.923033"
    ]
   },
   {
@@ -1035,7 +946,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
     "### Translate to long parameter names\n",
     "Because by default parameters are abbreviated without units"
@@ -1096,7 +1009,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Display location of dataset samples"
+    "### What is an authentication token and what is it good for?\n",
+    "\n",
+    "Example dataset with access restriction: https://doi.pangaea.de/10.1594/PANGAEA.960280"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "extract from help(pan.pandataset)\n",
+    "\n",
+    "class PanDataSet(builtins.object)\n",
+    "    PanDataSet(id=None, paramlist=None, deleteFlag='', enable_cache=False, include_data=True, expand_terms=[], auth_token=None, cache_expiry_days=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Find **your** temporary authentication token at https://pangaea.de/user/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "my_token = ''\n",
+    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.960280\", auth_token=my_token)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "ds.data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Display location of dataset samples\n",
+    "Example dataset: https://doi.pangaea.de/10.1594/PANGAEA.923033"
    ]
   },
   {
@@ -1105,6 +1068,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "ds = PanDataSet(923033)\n",
+    "get_long_parameters(ds)\n",
+    "\n",
     "# Plot sampling points on interactive plotly map\n",
     "fig = px.scatter_mapbox(ds.data, lat=\"LATITUDE\", lon=\"LONGITUDE\", \n",
     "                        hover_name=\"Event label\", \n",
@@ -1128,14 +1094,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create data folder\n",
-    "data_folder = \"PANGAEA_data\"\n",
+    "# Create data directory\n",
+    "data_directory = \"PANGAEA_data\"\n",
     "# Check if it already exists before creating it\n",
-    "if not os.path.isdir(data_folder):\n",
-    "    os.mkdir(data_folder)\n",
+    "if not os.path.isdir(data_directory):\n",
+    "    os.mkdir(data_directory)\n",
     "# Save as csv (comma seperated value)\n",
     "print(f'PANGAEA dataset {ds.id} saved')\n",
-    "ds.data.to_csv(os.path.join(data_folder, f'PANGAEA_dataset_{ds.id}.csv'),index=False)"
+    "ds.data.to_csv(os.path.join(data_directory, f'PANGAEA_dataset_{ds.id}.csv'),index=False)"
    ]
   },
   {
@@ -1274,16 +1240,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create data folder\n",
-    "data_folder = \"PANGAEA_data\"\n",
-    "if not os.path.isdir(data_folder):\n",
-    "    os.mkdir(data_folder)\n",
+    "# Create data directory\n",
+    "data_directory = \"PANGAEA_data\"\n",
+    "if not os.path.isdir(data_directory):\n",
+    "    os.mkdir(data_directory)\n",
     "    \n",
     "# Loop over each dataset in the dictionary and save to csv\n",
     "for key, df in data_dict.items():\n",
     "    print(f'PANGAEA dataset {key} saved')\n",
     "    # Save to csv\n",
-    "    data_dict[key].to_csv(os.path.join(data_folder, f'PANGAEA_dataset_{key}.csv'),index=False)"
+    "    data_dict[key].to_csv(os.path.join(data_directory, f'PANGAEA_dataset_{key}.csv'),index=False)"
    ]
   },
   {
@@ -1369,12 +1335,12 @@
    },
    "outputs": [],
    "source": [
-    "# Create data folder\n",
-    "data_folder = \"PANGAEA_data\"\n",
-    "if not os.path.isdir(data_folder):\n",
-    "    os.mkdir(data_folder)\n",
+    "# Create data directory\n",
+    "data_directory = \"PANGAEA_data\"\n",
+    "if not os.path.isdir(data_directory):\n",
+    "    os.mkdir(data_directory)\n",
     "    \n",
-    "data_all.to_csv(os.path.join(data_folder, f'PANGAEA_dataset_all.csv'),index=False)"
+    "data_all.to_csv(os.path.join(data_directory, f'PANGAEA_dataset_all.csv'),index=False)"
    ]
   },
   {
@@ -1402,18 +1368,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solution 4.3.1\n",
-    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.947275\")\n",
-    "print(ds.data.head(3))\n",
-    "print(f'The first event name is {ds.data.loc[0][\"Event\"]}')"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1428,23 +1382,6 @@
    "outputs": [],
    "source": [
     "# Your solution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#@title Solution 4.3.2\n",
-    "# Download and store data table in df\n",
-    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.943624\")\n",
-    "df = ds.data\n",
-    "# Filter sampling points above 1000m\n",
-    "df_1000 = df[df[\"Elevation\"]>1000]\n",
-    "#print(df_1000.head(3))\n",
-    "# Count the number of sampling points\n",
-    "print(f'There are {len(df_1000)} sampling point above 1000m')\n"
    ]
   },
   {
@@ -1465,25 +1402,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 5. Download binary files"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5.1 Download PANGAEA dataset with image data\n",
+    "Dataset: https://doi.pangaea.de/10.1594/PANGAEA.943250"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
-    "#@title Solution 4.3.3\n",
-    "ds = PanDataSet(\"https://doi.pangaea.de/10.1594/PANGAEA.943455\")\n",
-    "# Translate to long parameters\n",
+    "# Download dataset from PANGAEA\n",
+    "pan_id = 943250\n",
+    "ds = PanDataSet(pan_id)\n",
+    "# Spell out abbreviated parameters\n",
     "get_long_parameters(ds)\n",
-    "#print(ds.data.head(3))\n",
+    "df = ds.data.iloc[22:25,:]\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "## 5.2 Download images"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# Create data directory\n",
+    "data_directory = \"PANGAEA_data\"\n",
+    "if not os.path.isdir(data_directory):\n",
+    "    os.mkdir(data_directory)\n",
     "\n",
-    "# Plot sampling points on interactive plotly map\n",
-    "fig = px.scatter_mapbox(ds.data, lat=\"LATITUDE\", lon=\"LONGITUDE\", \n",
-    "                        hover_name=\"Event label\", \n",
-    "                        hover_data=['LATITUDE', 'LONGITUDE', 'ELEVATION [m a.s.l.]', 'Genus'], \n",
-    "                        zoom=0, height=300)\n",
-    "fig.update_layout(mapbox_style=\"open-street-map\")\n",
-    "fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
-    "fig.show()"
+    "# Create file urls\n",
+    "df[\"image_url\"] = [f'https://download.pangaea.de/dataset/{pan_id}/files/{img}' for img in df['Image']]\n",
+    "# Download images\n",
+    "for i, file_url in enumerate(df[\"image_url\"]):\n",
+    "    urlretrieve(file_url, os.path.join(data_directory, df[\"Image\"].iloc[i]))\n",
+    "    print(f'{file_url} downloaded')"
    ]
   }
  ],
