--- a/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
@@ -473,7 +473,12 @@
     "tags": []
    },
    "source": [
-    "# 3. Get metadata"
+    "# 3. Get metadata\n",
+    "\n",
+    "A long list of metadata is callable with PanDataSet. \n",
+    "Find a comprehensive list in internal documentation  \n",
+    "_help(pan.PanQuery)_  \n",
+    "or in this [notebook full of examples](https://github.com/pangaea-data-publisher/community-workshop-material/tree/master/Python/PANGAEApy_practical/pangaeapy_detailed_metadata_search.ipynb)"
    ]
   },
   {
