more details on metadata

--- a/Python/PANGAEApy_practical/pangaeapy_detailed_metadata_search.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_detailed_metadata_search.ipynb
@@ -38,18 +38,18 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "73b32159-aa8c-4b39-a53e-807b7bed0d9a",
+   "cell_type": "markdown",
+   "id": "e674478d-029f-4991-9132-3d439fa1bd3c",
    "metadata": {},
    "source": [
-    "if you need to install PANGAEApy use pip\n",
-    "!pip install pangaeapy\n",
+    "Ff you need to install PANGAEApy use pip  \n",
+    "_!pip install pangaeapy_\n",
     "\n",
-    "if you need to upgrade PANGAEApy use \n",
-    "!pip install pangaeapy --upgrade\n",
+    "If you need to upgrade PANGAEApy use pip   \n",
+    "_!pip install pangaeapy --upgrade_\n",
     "\n",
-    "check version of PANGAEApy\n",
-    "!pip show pangaeapy\n",
+    "Check your version of PANGAEApy via pip  \n",
+    "_!pip show pangaeapy_\n",
     "\n",
     "for details see https://pypi.org/project/pangaeapy/ "
    ]
@@ -125,14 +125,14 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "1feeecb9-4e2f-4fd6-b7aa-268a39bdca41",
+   "cell_type": "markdown",
+   "id": "5815e630-3a95-49c2-95a9-053893f96290",
    "metadata": {},
    "source": [
-    "example dataset URIs:\n",
-    "https://doi.pangaea.de/10.1594/PANGAEA.935580 => Mastertrack\n",
-    "https://doi.pangaea.de/10.1594/PANGAEA.963942 => CTD dataset with 86 events\n",
-    "https://doi.pangaea.de/10.1594/PANGAEA.952014 => collection \n",
+    "example dataset URIs:  \n",
+    "https://doi.pangaea.de/10.1594/PANGAEA.935580 => Mastertrack  \n",
+    "https://doi.pangaea.de/10.1594/PANGAEA.963942 => CTD dataset with 86 events  \n",
+    "https://doi.pangaea.de/10.1594/PANGAEA.952014 => collection  \n",
     "https://doi.pangaea.de/10.1594/PANGAEA.960624 => dataset with 1 event and many parameters"
    ]
   },
@@ -145,13 +145,13 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "e7e0bb8b-5fbd-486e-b0f0-cd7f85fca93d",
+   "cell_type": "markdown",
+   "id": "b598146a-5a3b-4eac-bbc8-68b2855af352",
    "metadata": {},
    "source": [
-    "PanDataSet(id=None, paramlist=None, deleteFlag='', enable_cache=False, include_data=True, expand_terms=[], auth_token=None, cache_expiry_days=1)  \n",
+    "_PanDataSet(id=None, paramlist=None, deleteFlag='', enable_cache=False, include_data=True, expand_terms=[], auth_token=None, cache_expiry_days=1)_  \n",
     "\n",
-    "id can be URI or just dataset id => same result"
+    "id can be URI or just dataset id number => same result"
    ]
   },
   {
@@ -238,14 +238,6 @@
    "outputs": [],
    "source": [
     "ds.year"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "id": "ad3a6162-99d2-4380-b203-36d208462e66",
-   "metadata": {},
-   "source": [
-    "PanAuthor(lastname, firstname=None, orcid=None, id=None, affiliations=None)"
    ]
   },
   {
@@ -492,6 +484,7 @@
    },
    "outputs": [],
    "source": [
+    "# function writes all event information into seperate dataframe\n",
     "ds.getEventsAsFrame()"
    ]
   },
@@ -732,12 +725,12 @@
    ]
   },
   {
-   "cell_type": "raw",
-   "id": "b8c6ee6a-13fa-4c95-9aaf-6b2d8c508a5f",
+   "cell_type": "markdown",
+   "id": "3036c252-d9d8-4402-8b41-cb3ab4dde228",
    "metadata": {},
    "source": [
-    "example dataset URIs:\n",
-    "https://doi.pangaea.de/10.1594/PANGAEA.963942 => CTD dataset with 86 events\n",
+    "example dataset URIs:  \n",
+    "https://doi.pangaea.de/10.1594/PANGAEA.963942 => CTD dataset with 86 events  \n",
     "https://doi.pangaea.de/10.1594/PANGAEA.960624 => dataset with 1 event and many parameters"
    ]
   },
@@ -819,6 +812,7 @@
    },
    "outputs": [],
    "source": [
+    "# Translate short parameters names to long names including unit\n",
     "get_long_parameters(ds)"
    ]
   },
