--- a/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
@@ -1020,13 +1020,12 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "extract from help(pan.pandataset)\n",
-    "\n",
-    "class PanDataSet(builtins.object)\n",
-    "    PanDataSet(id=None, paramlist=None, deleteFlag='', enable_cache=False, include_data=True, expand_terms=[], auth_token=None, cache_expiry_days=1)"
+    "extract from help(pan.pandataset)  \n",
+    "_class PanDataSet(builtins.object)  \n",
+    "        PanDataSet(id=None, paramlist=None, deleteFlag='', enable_cache=False, include_data=True, expand_terms=[], auth_token=None, cache_expiry_days=1)_"
    ]
   },
   {
