--- a/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_practical.ipynb
@@ -477,8 +477,11 @@
     "\n",
     "A long list of metadata is callable with PanDataSet. \n",
     "Find a comprehensive list in internal documentation  \n",
-    "_help(pan.PanQuery)_  \n",
-    "or in this [notebook full of examples](https://github.com/pangaea-data-publisher/community-workshop-material/tree/master/Python/PANGAEApy_practical/pangaeapy_detailed_metadata_search.ipynb)"
+    "_help(pan.PanQuery)_    \n",
+    "\n",
+    "or in this notebook full of examples: [pangaeapy_detailed_metadata_search.ipynb](https://github.com/pangaea-data-publisher/community-workshop-material/tree/master/Python/PANGAEApy_practical/pangaeapy_detailed_metadata_search.ipynb)  \n",
+    "\n",
+    "additional example on how to extract project-specific information from PANGAEA datasets: [PANGAEA_access_metadata_per_project.ipynb](https://github.com/pangaea-data-publisher/community-workshop-material/blob/master/Python/PANGAEApy_practical/PANGAEA_access_metadata_per_project.ipynb)"
    ]
   },
   {
