note on quotations included

--- a/Python/PANGAEApy_practical/pangaeapy_practical_solutions.ipynb
+++ b/Python/PANGAEApy_practical/pangaeapy_practical_solutions.ipynb
@@ -14,9 +14,9 @@
     "# **pangaeapy practical**\n",
     "## **How to search and download data from PANGAEA**\n",
     "\n",
-    "Version: 0.1.0<br>\n",
+    "Version: 0.1.1<br>\n",
     "By: Kathrin Riemann-Campe and Michael Oellermann<br>\n",
-    "Last updated: 2024-05-02\n",
+    "Last updated: 2024-05-03\n",
     "\n",
     "This notebook will guide you how to retrieve diverse earth- and environmental data and its metadata from the [PANGAEA data repository](https://www.pangaea.de) using Python. It uses the [PangaeaPy package](https://pypi.org/project/pangaeapy/), to facilitate the data download.\n",
     "\n",
@@ -145,7 +145,11 @@
     "\n",
     "AIM: What data can I find for a particular topic such as a species, location or author?\n",
     "\n",
-    "This mirrors the query via the [PANGAEA website](https://pangaea.de/)"
+    "This mirrors the query via the [PANGAEA website](https://pangaea.de/)  \n",
+    "\n",
+    "**Note:** The search term is enclosed with single quotes '. If your search term includes a blank, use additional double quotes \" inside the single quotes.  \n",
+    "Example: _'sea ice'_ vs. _'\"sea ice\"'_  \n",
+    "Example: _'parameter:Temperature, water method:CTD/Rosette'_ vs. _'parameter:\"Temperature, water\" method:CTD/Rosette'_"
    ]
   },
   {
@@ -172,7 +176,7 @@
    "outputs": [],
    "source": [
     "# query database for \"Triticum\"\n",
-    "query = pan.PanQuery(\"Triticum\")\n",
+    "query = pan.PanQuery('Triticum')\n",
     "print(f'There are {query.totalcount} query results.')\n",
     "\n",
     "# save query as dataframe\n",
@@ -221,7 +225,7 @@
    "outputs": [],
    "source": [
     "# find datasets that contain both \"marine\" and \"geology\"\n",
-    "query = pan.PanQuery(\"marine geology\")\n",
+    "query = pan.PanQuery('marine geology')\n",
     "print(f'There are {query.totalcount} query results.')"
    ]
   },
@@ -239,7 +243,7 @@
    "outputs": [],
    "source": [
     "# find datasets that contain \"Globigerina\" and either \"falconensis\" or \"bulloides\" \n",
-    "query = pan.PanQuery(\"Globigerina AND (falconensis OR bulloides)\")\n",
+    "query = pan.PanQuery('Globigerina AND (falconensis OR bulloides)')\n",
     "print(f'There are {query.totalcount} query results.')"
    ]
   },
@@ -257,7 +261,7 @@
    "outputs": [],
    "source": [
     "# find datasets with uncertain spelling of single letter\n",
-    "query = pan.PanQuery(\"Gl?bigerina\")\n",
+    "query = pan.PanQuery('Gl?bigerina')\n",
     "print(f'There are {query.totalcount} query results.')"
    ]
   },
@@ -268,7 +272,7 @@
    "outputs": [],
    "source": [
     "# finds datasets with \"Neogloboquadrina\" regardless of your spelling mistake\n",
-    "query = pan.PanQuery(\"~Neogloboqadrina\")\n",
+    "query = pan.PanQuery('~Neogloboqadrina')\n",
     "print(f'There are {query.totalcount} query results.') "
    ]
   },
@@ -286,7 +290,7 @@
    "outputs": [],
    "source": [
     "# find datasets of author \"Herzschuh\"\n",
-    "query = pan.PanQuery(\"citation:author:Herzschuh\")\n",
+    "query = pan.PanQuery('citation:author:Herzschuh')\n",
     "print(f'There are {query.totalcount} query results.') "
    ]
   },
@@ -305,7 +309,7 @@
    "source": [
     "# query database for \"Globigerina bulloides\" within a certain geolocation aka bounding box\n",
     "# bounding box: bbox=(minlon, minlat,  maxlon, maxlat)\n",
-    "query = pan.PanQuery(\"Globigerina bulloides\", limit = 500, bbox=(17.7, 67.7, 21, 69))\n",
+    "query = pan.PanQuery('Globigerina bulloides', limit = 500, bbox=(17.7, 67.7, 21, 69))\n",
     "print(f'There are {query.totalcount} query results.')"
    ]
   },
@@ -337,7 +341,7 @@
    "outputs": [],
    "source": [
     "# query database for project \"PAGES_C-PEAT\" \n",
-    "query = pan.PanQuery(\"project:label:PAGES_C-PEAT\", limit = 500)\n",
+    "query = pan.PanQuery('project:label:PAGES_C-PEAT', limit = 500)\n",
     "print(f'There are {query.totalcount} query results.')\n",
     "print(f'Currently query consists of {len(query.result)} entries.')"
    ]
@@ -358,7 +362,7 @@
     "# loop over all results in steps of 500\n",
     "for i in np.arange(0,query.totalcount,500):\n",
     "    # store result of individual step in qs\n",
-    "    qs = pan.PanQuery(\"project:label:PAGES_C-PEAT\", limit = 500, offset=i)\n",
+    "    qs = pan.PanQuery('project:label:PAGES_C-PEAT', limit = 500, offset=i)\n",
     "    # convert qs result with 500 entries to data frame df_qs\n",
     "    df_qs = pd.DataFrame(qs.result)\n",
     "    # concatenate all individual df_qs into one data frame named query_results_all\n",
@@ -426,7 +430,7 @@
    "outputs": [],
    "source": [
     "#@title Solution 2.4.1\n",
-    "query = pan.PanQuery(\"Octopus vulgaris\")\n",
+    "query = pan.PanQuery('\"Octopus vulgaris\"')\n",
     "print(f'There are {query.totalcount} query results.')"
    ]
   },
@@ -457,7 +461,7 @@
    "outputs": [],
    "source": [
     "#@title Solution 2.4.2\n",
-    "query = pan.PanQuery(\"citation:title:'sea ice'\")\n",
+    "query = pan.PanQuery('citation:title:\"sea ice\"')\n",
     "print(f'There are {query.totalcount} query results.')"
    ]
   },
@@ -484,7 +488,7 @@
    "outputs": [],
    "source": [
     "#@title Solution 2.4.3\n",
-    "query = pan.PanQuery(\"citation:author:'boetius, antje'\")\n",
+    "query = pan.PanQuery('citation:author:\"boetius, antje\"')\n",
     "print(f'There are {query.totalcount} query results.')"
    ]
   },
@@ -511,7 +515,7 @@
    "outputs": [],
    "source": [
     "#@title Solution 2.4.4\n",
-    "query = pan.PanQuery(\"parameter:'Temperature, water' method:CTD/Rosette\")\n",
+    "query = pan.PanQuery('parameter:\"Temperature, water\" method:CTD/Rosette')\n",
     "print(f'There are {query.totalcount} query results.')"
    ]
   },
@@ -979,7 +983,7 @@
    "outputs": [],
    "source": [
     "# query database for \"Deep-sea Sponge Microbiome Project\" \n",
-    "query = pan.PanQuery(\"Deep-sea Sponge Microbiome Project\", limit = 50)\n",
+    "query = pan.PanQuery('\"Deep-sea Sponge Microbiome Project\"', limit = 50)\n",
     "query_results = pd.DataFrame(query.result)\n",
     "query_results"
    ]
