--- a/Python/Data_curation_checklist/Data_curation_checklist.ipynb
+++ b/Python/Data_curation_checklist/Data_curation_checklist.ipynb
@@ -17,9 +17,9 @@
    "source": [
     "# **Data Curation Checklist**\n",
     "\n",
-    "Version: 1.1<br>\n",
-    "By: Michael Oellermann, Kathrin Riemann-Campe<br>\n",
-    "Last updated: 2023-10-30\n",
+    "Version: 1.2<br>\n",
+    "By: Kathrin Riemann-Campe, Michael Oellermann<br>\n",
+    "Last updated: 2024-10-16\n",
     "\n",
     "This notebook aims to help you, to check and resolve some common problems and issues with data tables, before submitting them to a data repository like [PANGAEA](https://www.pangaea.de/submit/).\n",
     "\n",
@@ -36,7 +36,7 @@
     "id": "z3kGGrlUEN_H"
    },
    "source": [
-    "# 1. Import libraries"
+    "# 1. Import libraries/packages"
    ]
   },
   {
@@ -56,11 +56,19 @@
     "import pandas as pd\n",
     "import re\n",
     "import random\n",
-    "from datetime import date, timedelta # to generate dates\n",
-    "#!pip install LatLon23\n",
-    "from LatLon23 import string2latlon #Latitude/Longitude conversion module\n",
-    "import requests #To download PANGAEA parameters\n",
-    "from difflib import get_close_matches #To find matching parameters\n"
+    "\n",
+    "# date/time conversion package\n",
+    "from datetime import date, timedelta\n",
+    "\n",
+    "# Latitude/Longitude conversion package\n",
+    "!pip install LatLon23 \n",
+    "from LatLon23 import string2latlon\n",
+    "\n",
+    "# needed to download PANGAEA parameters\n",
+    "import requests\n",
+    "\n",
+    "# needed to find matching parameters\n",
+    "from difflib import get_close_matches "
    ]
   },
   {
@@ -69,7 +77,7 @@
     "id": "X4Sf5nsdE0_I"
    },
    "source": [
-    "# 2. Create practice data table\n",
+    "# 2. Create a practice data table\n",
     "* Create random number data file for PANGAEA test submission\n",
     "* Added mistakes:\n",
     "  * Date and time in separate columns\n",
@@ -101,8 +109,9 @@
    },
    "outputs": [],
    "source": [
-    "# Function to create fake data\n",
+    "# Function to create fake data including mistakes\n",
     "def create_fake_df():\n",
+    "  \n",
     "  # Add numeric features\n",
     "  df = pd.DataFrame()\n",
     "  df['latitude (deg)'] = np.arange(start = 69.2, stop = 89, step = 0.1).reshape(-1)\n",
@@ -124,20 +133,21 @@
     "  species = 100*[\"Stenella coeruleoalba\", \"Tursiops truncatus\", \"Dolphinus delphis\"]\n",
     "  df['species'] = species[0:len(df)]\n",
     "\n",
-    "  # Add row with comments\n",
+    "  # Add row with comments \n",
+    "  # first convert data type float (numbers only) to data type object (mix of numbers and strings)\n",
+    "  df = df.astype(object)\n",
     "  df.loc[0] = df.shape[1]*[\"Comment\"]\n",
-    "\n",
+    "  \n",
     "  # Add row at the end with \"Total sum\"\n",
     "  df.loc[len(df)] = df.shape[1]*[\"Total sum\"]\n",
-    "\n",
     "\n",
     "  # Add empty column\n",
     "  df['Empty'] = np.nan\n",
     "\n",
-    "\n",
     "  ## Date and time manipulations\n",
+    "    \n",
     "  # Add date and time columns\n",
-    "  sdate = date(2010,3,22)   # start date\n",
+    "  sdate = date(2010,3,22)  # start date\n",
     "  edate = date(2021,4,9)   # end date\n",
     "  # Generate date and time range\n",
     "  date_time_range = pd.date_range(sdate,edate-timedelta(days=1),freq='h')\n",
@@ -145,7 +155,7 @@
     "  df['date'] = random.sample(date_time_range.date.tolist(), len(df))\n",
     "  # Sample random time\n",
     "  df['time'] = random.sample(date_time_range.time.tolist(), len(df))\n",
-    "  # Convert to str data type\n",
+    "  # Convert to data type string\n",
     "  df['date'] = df['date'].astype(str)\n",
     "  df['time'] = df['time'].astype(str)\n",
     "\n",
@@ -171,17 +181,42 @@
     "          'lngitude (deg)', 'water depth (cm)', 'water temperature (degC)', 'Empty']]\n",
     "\n",
     "  ## Save as csv file\n",
-    "  #datapath = '/isibhv/projects/p_pangaea_proces/kriemann/community_workshop_stuff/'\n",
-    "  #df.to_csv((datapath+'test_data.csv'),index=False,sep=',')\n",
     "  df.to_csv(('test_data.csv'), index=False, sep=',')\n",
     "\n",
     "  # Show data table\n",
     "  df.head(3)\n",
     "\n",
-    "  return df\n",
-    "\n",
-    "df = create_fake_df()\n",
+    "  return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create dataframe with fake data\n",
+    "df = create_fake_df()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show dataframe, but only the first 5 rows\n",
     "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# show dataframe, but only the last 5 rows\n",
+    "df.tail()"
    ]
   },
   {
@@ -234,7 +269,15 @@
    "outputs": [],
    "source": [
     "# Check structure of data table\n",
-    "df.head(5)\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Alternative way to see head and tail together\n",
     "pd.concat([df.head(4), df.tail(4)])"
    ]
@@ -265,10 +308,27 @@
    },
    "outputs": [],
    "source": [
-    "# Remove row with comments\n",
-    "df = df.iloc[1: , :]\n",
-    "# Remove row with aggregated statistics\n",
-    "df = df.iloc[:-1 , :]\n",
+    "# Remove row with comments, which is first row here\n",
+    "df = df.iloc[1: , :] # [row, column]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pd.concat([df.head(2), df.tail(2)])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Remove row with aggregated statistics, which is last row here\n",
+    "df = df.iloc[:-1 , :] # [row, column]\n",
     "pd.concat([df.head(2), df.tail(2)])"
    ]
   },
@@ -339,7 +399,7 @@
    },
    "outputs": [],
    "source": [
-    "# Remove all columns containing nothing\n",
+    "# Remove all columns containing nothing (just NaN)\n",
     "df.dropna(axis = 1, how = 'all', inplace = True)"
    ]
   },
@@ -365,6 +425,7 @@
    },
    "outputs": [],
    "source": [
+    "# replace missing values with empty cells\n",
     "df['water depth (cm)'] = df['water depth (cm)'].str.replace('-999.9', '', regex=False)\n",
     "df['water depth (cm)'] = df['water depth (cm)'].str.replace('n/a', '', regex=False)"
    ]
@@ -423,6 +484,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert specific column to numeric\n",
+    "df['latitude (deg)'] = pd.to_numeric(df['latitude (deg)'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -433,13 +504,17 @@
    },
    "outputs": [],
    "source": [
-    "# Convert specific column to numeric\n",
-    "df['latitude (deg)'] = pd.to_numeric(df['latitude (deg)'])\n",
-    "\n",
     "# OR: Convert multiple columns of dataframe to numeric\n",
-    "df[df.columns[6:]] = df[df.columns[6:]].apply(pd.to_numeric)\n",
-    "\n",
-    "#Check numeric features for text entries\n",
+    "df[df.columns[6:]] = df[df.columns[6:]].apply(pd.to_numeric)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check data type\n",
     "df.info()"
    ]
   },
@@ -450,6 +525,15 @@
    },
    "source": [
     "### Remove leading and trailing white space"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.columns"
    ]
   },
   {
@@ -481,12 +565,30 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "i8bROrwUvI0n"
    },
    "source": [
     "### Merge Date and Time and convert to PANGAEA format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
    ]
   },
   {
@@ -504,12 +606,33 @@
    "outputs": [],
    "source": [
     "# Join date and time\n",
-    "df['date'] = pd.to_datetime(df['date'] + ' ' + df['time'])\n",
+    "df['date/time'] = pd.to_datetime(df['date'] + ' ' + df['time'])\n",
+    "\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Convert to pangaea standard time format\n",
-    "df['date'] = df['date'].dt.strftime('%Y-%m-%dT%H:%M:%S')\n",
+    "df['date/time'] = df['date/time'].dt.strftime('%Y-%m-%dT%H:%M:%S')\n",
+    "\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Remove redundant time column\n",
-    "df = df.drop(\"time\", axis = 1)\n",
-    "df.head()"
+    "df = df.drop(['date','time'], axis = 1)\n",
+    "\n",
+    "df.head(2)"
    ]
   },
   {
@@ -535,6 +658,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Split cell by ; seperator\n",
+    "df['lat'] = [x.split(\";\")[0] for x in  df['lat/lon']]\n",
+    "df['lon'] = [x.split(\";\")[1] for x in  df['lat/lon']]\n",
+    "\n",
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -546,11 +691,9 @@
    },
    "outputs": [],
    "source": [
-    "# Split cell by ; seperator\n",
-    "df['lat'] = [x.split(\";\")[0] for x in  df['lat/lon']]\n",
-    "df['lon'] = [x.split(\";\")[1] for x in  df['lat/lon']]\n",
     "# Remove old lat/lon column\n",
     "df = df.drop('lat/lon', axis = 1)\n",
+    "\n",
     "df.head(2)"
    ]
   },
@@ -583,9 +726,19 @@
     "    long_dec = [round(string2latlon(lat, long, format).lon.decimal_degree, decimals) for lat, long in zip(latitude, longitude)]\n",
     "\n",
     "    return lat_dec, long_dec\n",
-    "\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# call geo_decimal function\n",
     "df['lat'], df['lon'] =  geo_decimal(df['lat'], df['lon'], format = \"d%°%m%'%S%''%H\")\n",
-    "df.head()"
+    "\n",
+    "df.head(2)"
    ]
   },
   {
@@ -620,16 +773,38 @@
    "outputs": [],
    "source": [
     "# What are the abbreviations\n",
-    "df['Threatened status'].unique()\n",
-    "\n",
+    "df['Threatened status'].unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create list with abbreviations\n",
-    "abbreviated = ('LC', 'NT', 'EN', 'EX')\n",
-    "\n",
+    "abbreviated = ('LC', 'NT', 'EN', 'EX')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Create list with full names\n",
-    "spelled_out = ('Least Concern', 'Near Threatened', 'Endangered', 'Extinct in the Wild')\n",
-    "\n",
+    "spelled_out = ('Least Concern', 'Near Threatened', 'Endangered', 'Extinct in the Wild')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Replace the values in 'Name' column with the dictionary\n",
     "df = df.replace({\"Threatened status\": dict(zip(abbreviated, spelled_out))})\n",
+    "\n",
     "df.head()"
    ]
   },
@@ -655,7 +830,15 @@
    "outputs": [],
    "source": [
     "# Create data frame with unique species names\n",
-    "species = pd.DataFrame({'name': df[\"species\"].drop_duplicates()})\n",
+    "species = pd.DataFrame({'name': df[\"species\"].drop_duplicates()})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Save as csv for upload to WoRMS or ITIS\n",
     "species.to_csv('Species.txt', index=False, sep=\"\\t\")\n",
     "print(species)"
@@ -700,8 +883,17 @@
    "outputs": [],
    "source": [
     "# Correct mispelled species names\n",
-    "df['species'] = df['species'].str.replace('Dolphinus delphis', 'Delphinus delphis')\n",
-    "df['species'].unique()\n"
+    "df['species'] = df['species'].str.replace('Dolphinus delphis', 'Delphinus delphis')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check current spelling\n",
+    "df['species'].unique()"
    ]
   },
   {
@@ -764,9 +956,25 @@
    "outputs": [],
    "source": [
     "# Load parameter list\n",
-    "params = pd.read_csv('PANGAEA_parameters.tab', sep = '\\t', on_bad_lines = \"warn\")\n",
+    "params = pd.read_csv('PANGAEA_parameters.tab', sep = '\\t', on_bad_lines = \"warn\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Check out table size\n",
-    "print(f'There are currently {params.shape[0]} parameters available in PANGAEA')\n",
+    "print(f'There are currently {params.shape[0]} parameters available in PANGAEA')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Short glance at the data table\n",
     "pd.concat([params.head(4), params.tail(4)])"
    ]
@@ -778,7 +986,7 @@
    },
    "source": [
     "### Lookup similar parameters in the existing list of PANGAEA parameters\n",
-    "Note: If you cant find a suitable parameter we can create a new one for you"
+    "Note: If you cannot find a suitable parameter we can create a new one for you"
    ]
   },
   {
@@ -836,6 +1044,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print('original column names: ',df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define new column names \n",
+    "new_col_names = ['Location []', 'IUCN Red List status []', \n",
+    "                 'Species []', 'LATITUDE []', 'LONGITUDE []',\n",
+    "                 'DEPTH, water [m]', 'Temperature, water [°C]',\n",
+    "                 'DATE/TIME []', 'Latitude 2 []', 'Longitude 2 []']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -846,10 +1076,42 @@
    },
    "outputs": [],
    "source": [
-    "print('original column names: ',df.columns)\n",
-    "df.columns = ['DATE/TIME []', 'Location []', 'IUCN Red List status []', 'Species []', 'LATITUDE []', 'LONGITUDE []', \n",
-    "              'DEPTH, water [m]', 'Temperature, water [°C]', 'Latitude 2 []', 'Longitude 2 []']\n",
-    "df.head(2)"
+    "# replace original column names with new column names\n",
+    "df.columns = new_col_names\n",
+    "\n",
+    "print('new column names: ',df.columns)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# sort columns\n",
+    "df = df[['DATE/TIME []','LATITUDE []','LONGITUDE []',\n",
+    "         'Latitude 2 []', 'Longitude 2 []','DEPTH, water [m]',\n",
+    "         'Location []', 'Species []', 'IUCN Red List status []',\n",
+    "         'Temperature, water [°C]'\n",
+    "        ]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head(3)"
    ]
   },
   {
@@ -910,9 +1172,8 @@
    },
    "outputs": [],
    "source": [
-    "df['Uniform resource locator/link to reference []'] = \"https://doi.org/10.1594/PANGAEA.945749\"\n",
-    "\n",
-    "[f'This link works' if requests.get(url).status_code == 200 else False for url in df['Uniform resource locator/link to reference []'][:2]]"
+    "# add URL in mew column\n",
+    "df['Uniform resource locator/link to reference []'] = \"https://doi.org/10.1594/PANGAEA.945749\""
    ]
   },
   {
@@ -923,7 +1184,17 @@
    },
    "outputs": [],
    "source": [
-    "df.head(4)"
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# check if URL are working\n",
+    "[f'This link works' if requests.get(url).status_code == 200 else False for url in df['Uniform resource locator/link to reference []'][:2]] # check only the first 2 links"
    ]
   },
   {
@@ -933,7 +1204,7 @@
    },
    "source": [
     "## 3.8. Event\n",
-    "An [EVENT](https://wiki.pangaea.de/wiki/Event) refers to the sampling event at which the data was obtained, such as a [station](https://www.pangaea.de/expeditions/) during a research expedition."
+    "An [EVENT](https://wiki.pangaea.de/wiki/Event) refers to the sampling event at which the data was obtained, such as a [station](https://www.pangaea.de/expeditions/) during a research expedition. An [EVENT](https://wiki.pangaea.de/wiki/Event) can also be described as metadata overview of a sampling device or sampling method"
    ]
   },
   {
@@ -949,7 +1220,8 @@
    },
    "outputs": [],
    "source": [
-    "df.insert(0, \"Event []\", \"PS132_1-2\")\n",
+    "# add event column\n",
+    "df.insert(loc = 0, column = 'Event []', value = 'PS132_1-2')\n",
     "df.head(2)"
    ]
   },
@@ -960,7 +1232,7 @@
    },
    "source": [
     "# 4. Save curated data\n",
-    "* as Excel or tab-delimited text files\n",
+    "* as tab-delimited text files\n",
     "* Important: PANGAEA only accepts UTF-8 encoding to avoid unicode errors\n"
    ]
   },
@@ -993,10 +1265,17 @@
    "source": [
     "# Acknowledgements\n",
     "\n",
-    "Michael Oellermann/this work was supported by the German Research Foundation DFG under the grant agreement number  442032008 (NFDI4Biodiversity). The project is part of NFDI, the National Research Data Infrastructure Programme in Germany.  \n",
+    "Michael Oellermanns work was supported by the German Research Foundation DFG under the grant agreement number  442032008 (NFDI4Biodiversity). The project is part of NFDI, the National Research Data Infrastructure Programme in Germany.  \n",
     "\n",
     "<img src=\"./NFDI_4_Biodiversity___Logo_Positiv.png\" alt=\"NFDI4Biodiversity Logo\" align=\"left\" width=\"300\">"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
